# spider-nodejs

./: .editorconfig  .eslintrc.yml  .gitignore  .npmignore  .yarnrc.yml  404.html  Cargo.toml  README.md  benchmarks.html  crawl.html  cron-job.html  env.html  getting-started.html  index.d.ts  index.html  index.js  nodejs.html  package.json  page.html  print.html  scrape.html  searcher-c2a407aa.js  searchindex-b4740757.js  searchindex.js  searchindex.json  simple.html  storing-data.html  toc-b523aaa5.js  toc.html  tsconfig.json  website.html
.github/workflows/: CI.yml  bench.yml  book.yml
.yarn/releases/: yarn-3.6.4.cjs  yarn-4.0.2.cjs  yarn-4.3.1.cjs
__test__/: index.spec.mjs  index.spec.ts
bench/: README.md  base.ts  compare.ts  crawlee.ts  oss.ts  package-lock.json  package.json
bench/case/: crawlee.ts  spider.ts
book/: book.toml
book/src/: README.md  SUMMARY.md  benchmarks.md  crawl.md  cron-job.md  env.md  getting-started.md  page.md  scrape.md  simple.md  storing-data.md  website.md
examples/: basic.mjs  cron.mjs  openai.mjs  subscription.mjs
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: README.md  SUMMARY.md  conversions.rs  lib.rs  nodejs.md  npage.rs  nwebsite.rs  page.rs  shortcut.rs  website.rs
