[package]
edition = "2021"
name = "spider-rs_spider-rs"
version = "0.0.0"
description = "The fastest web crawler written in Rust ported to nodejs."
repository = "https://github.com/spider-rs/spider-nodejs"
authors = ["j-mendez <jeff@a11ywatch.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
indexmap = "2"
napi = { version = "2", default-features = false, features = ["napi4", "async", "tokio_rt", "serde-json"] }
napi-derive = "2"
num_cpus = "1"
serde = "1"
serde_json = "1"
spider = { version = "2", features = ["cron", "regex", "cookies", "socks", "chrome", "control", "chrome_intercept", "cache", "openai", "serde", "real_browser", "headers" ] }

[target.x86_64-unknown-linux-gnu.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }
openssl = { version = "0.10", features = ["vendored"] }

[target.aarch64-unknown-linux-musl.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }
openssl = { version = "0.10", features = ["vendored"] }

[target.aarch64-unknown-linux-gnu.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }
openssl = { version = "0.10", features = ["vendored"] }

[target.armv7-unknown-linux-gnueabihf.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }
openssl = { version = "0.10", features = ["vendored"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }
openssl = { version = "0.10", features = ["vendored"] }

[target.armv7-linux-androideabi.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }
openssl = { version = "0.10", features = ["vendored"] }

[target.aarch64-linux-android.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }
openssl = { version = "0.10", features = ["vendored"] }


[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
