[package]
edition = "2024"
name = "spider-rs_spider-rs"
version = "0.0.0"
description = "The fastest web crawler written in Rust ported to nodejs."
repository = "https://github.com/spider-rs/spider-nodejs"
authors = ["j-mendez <jeff@a11ywatch.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
openssl = { version = "0.10", optional = true }
indexmap = "2"
napi = { version = "2", default-features = false, features = ["napi4", "async", "tokio_rt", "serde-json"] }
napi-derive = "2"
num_cpus = "1"
serde = "1"
serde_json = "1"
spider = { version = "2", default-features = false, features = [
    "cron", 
    "regex", 
    "cookies", 
    "socks", 
    "chrome", 
    "control", 
    "chrome_intercept", 
    "cache", 
    "openai", 
    "serde", 
    "real_browser", 
    "headers", 
    "reqwest_rustls_tls", 
    "io_uring",
    "sync", 
    "disk", 
    "cookies", 
    "ua_generator", 
    "encoding",
    "smart",
    "string_interner_buffer_backend", 
    "balance"
    ] }
spider_scraper = "0.1"

[features]
default = []
vendored-openssl = ["openssl/vendored"]

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
